configuration and migration

--- a/MovieShop/appsettings.json
+++ b/MovieShop/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MovieShopDbConnection": "Server=(local);Integrated Security=true;Initial Catalog=MovieShopDb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
